<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_question1"
    android:background="@drawable/bg"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q1"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/textView"
        android:layout_marginTop="40dp"
        android:textAlignment="center" />
    <Button
        android:id="@+id/q1Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:alpha=".7"
        android:text="@string/q1_a1"
        android:onClick="onClickWrong"
        android:textAlignment="viewStart" />
    <Button
        android:id="@+id/q1Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/q1Button1"
        android:alpha=".7"
        android:text="@string/q1_a2"
        android:onClick="onClickWrong"
        android:textAlignment="viewStart" />
    <Button
        android:id="@+id/q1Button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/q1Button2"
        android:alpha=".7"
        android:text="@string/q1_a3"
        android:onClick="onClickWrong"
        android:textAlignment="viewStart" />
    <Button
        android:id="@+id/q1Button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".7"
        android:layout_below="@+id/q1Button3"
        android:text="@string/q1_a4"
        android:onClick="onClickRight"
        android:textAlignment="viewStart"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
