<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.quizattempt.Question3"
    android:background="@drawable/bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q3"
        android:textSize="20sp"
        android:id="@+id/textView"
        android:layout_marginTop="40dp" />

    <Button
        android:id="@+id/q3Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/q3Button1"
        android:layout_centerVertical="true"
        android:alpha=".7"
        android:onClick="onClickWrong"
        android:text="@string/q3_a2" />
    <Button
        android:id="@+id/q3Button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/q3Button2"
        android:alpha=".7"
        android:onClick="onClickWrong"
        android:text="@string/q3_a3" />
    <Button
        android:id="@+id/q3Button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".7"
        android:onClick="onClickRight"
        android:layout_below="@+id/q3Button3"
        android:text="@string/q3_a4" />

    <Button
        android:id="@+id/q3Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".7"
        android:onClick="onClickWrong"
        android:text="@string/q3_a1"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
