<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.quizattempt.Question2"
    android:background="@drawable/bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q2"
        android:textSize="20sp"
        android:id="@+id/textView"
        android:layout_marginTop="40dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/q2Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/q2Button1"
        android:alpha=".7"
        android:onClick="onClickRight"
        android:text="@string/q2_a2"
        android:textAlignment="viewStart" />
    <Button
        android:id="@+id/q2Button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/q2Button2"
        android:alpha=".7"
        android:onClick="onClickWrong"
        android:text="@string/q2_a3"
        android:textAlignment="viewStart" />
    <Button
        android:id="@+id/q2Button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".7"
        android:onClick="onClickWrong"
        android:layout_below="@+id/q2Button3"
        android:text="@string/q2_a4"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/q2Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".7"
        android:onClick="onClickWrong"
        android:text="@string/q2_a1"
        android:layout_marginTop="15dp"
        android:textAlignment="viewStart"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
